# Vibhi-Hime

./: .gitignore  .replit  Procfile  README.md  Vibhi.py  anon_id.txt  gif_scraper.py  img_splitter.py  keep_alive.py  milti_gif_view.py  package-lock.json  pyproject.toml  requirements.txt  vibhi1.py
chat-with-vibhi/: chat.py  default.aiml  primitive-math.aiml  startup.xml  std-hello.aiml
cogs/: _music.py  anime.py  chat.py  error_event.py  fun.py  games.py  help.py  image_manipulation.py  message_events.py  misc.py  moderation.py  music.py  roleplay.py  utility.py
experimental/: patter.py  tempCodeRunnerFile.py
files/: prefixes.json  rp_cmd.txt
files/roleplay/: kill.txt  laugh.txt
files/rp/: ara-ara.txt  blush.txt  chase.txt  cry.txt  cuddle.txt  dance.txt  die.txt  dodge.txt  hug.txt  kick.txt  kill.txt  laugh.txt  lick.txt  nom.txt  nosebleed.txt  party.txt  pat.txt  poke.txt  punch.txt  run.txt  sad.txt  shoot.txt  slap.txt  smile.txt  stare.txt
